added toggle notes shortcut key (alt-o) it might be a bit rough

--- a/README
+++ b/README
@@ -17,5 +17,6 @@ Implementation Differences:
   - Alt+c – Contexts
   - Alt+d – Completed Tasks
   - Alt+l – Calendar of due actions
+  - Alt+o – Show all notes
   - Alt+n – Show/Hide Form (Add Action/Project/Context)
   - Ctrl+p – Print
