added alt+s to readme

--- a/README
+++ b/README
@@ -12,6 +12,7 @@ Implementation Differences:
 
 Keyboard Shortcuts
  - Alt+t – Home
+ - Alt+s – Starred
  - Alt+p – Projects
  - Alt+k – Tickler
  - Alt+c – Contexts
